# klondike

./: CMakeLists.txt  README.md  klondike.cpp  klondike.hpp  main.cpp  standaloneklondike.cpp  standaloneklondike.hpp
controllers/: CMakeLists.txt  controller.hpp  controllervisitor.hpp  locallogic.cpp  locallogic.hpp  logic.hpp  movecontroller.cpp  movecontroller.hpp  startcontroller.cpp  startcontroller.hpp
models/: CMakeLists.txt  area.cpp  area.hpp  arealist.cpp  arealist.hpp  card.hpp  cardsstack.hpp  deck.cpp  deck.hpp  deckarea.cpp  deckarea.hpp  deckdraggedcards.cpp  deckdraggedcards.hpp  deckpile.cpp  deckpile.hpp  deckstack.hpp  draggedcards.hpp  draggedcardsvisitor.hpp  foundation.cpp  foundation.hpp  foundationdraggedcards.cpp  foundationdraggedcards.hpp  foundationpile.cpp  foundationpile.hpp  foundationstack.hpp  game.cpp  game.hpp  movement.cpp  movement.hpp  pile.cpp  pile.hpp  pilelist.cpp  pilelist.hpp  pilevisitor.hpp  stack.cpp  stack.hpp  stacklist.cpp  stacklist.hpp  tableau.cpp  tableau.hpp  (+12 more)
utils/: strings.hpp
views/: CMakeLists.txt  arealistview.cpp  arealistview.hpp  areaview.cpp  areaview.hpp  cardview.cpp  cardview.hpp  consoleview.cpp  consoleview.hpp  emptyview.cpp  emptyview.hpp  gameview.cpp  gameview.hpp  movementdialog.cpp  movementdialog.hpp  moveview.cpp  moveview.hpp  pilelistview.cpp  pilelistview.hpp  pileview.cpp  pileview.hpp  stackview.cpp  stackview.hpp  startview.cpp  startview.hpp  view.hpp  windialog.cpp  windialog.hpp
